--- a/package.json
+++ b/package.json
@@ -23,12 +23,8 @@
   },
   "devDependencies": {
     "ava": "^0.13.0",
-    "babel-core": "^6.7.4",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.6.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "eslint": "^2.10.1",
+    "eslint-config-google": "^0.5.0"
   },
   "dependencies": {
     "cheerio": "^0.20.0",
