--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "scripts": {
-    "build": "gulp",
-    "prepublish": "gulp",
-    "test": "ava test"
-  },
   "name": "kdownload",
   "author": "Sean Wilson",
   "version": "1.2.1",
@@ -22,11 +17,11 @@
     "kdl": "./lib/index.js"
   },
   "devDependencies": {
-    "ava": "^0.13.0",
     "eslint": "^2.10.1",
     "eslint-config-google": "^0.5.0"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "cloudscraper": "^1.2.2",
     "minimist": "^1.2.0",
